feat : 게시글 조회 응답 구조에서 stackId를 배열로  변경 Ref : #116